--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>Title</title>
 </head>
 <body>
-<h1>Save the animals</h1>
-<p>Esta pagina web esta dedicada al cuidado de animales en peligro de extincion</p>
+<h1>Compra una deliciosa leshe</h1>
+<p>Tan solo a 200$ la deliciosa leshe shavo</p>
 <style>
 body {background-color: powderblue;}
 h1   {color: black;
@@ -15,8 +15,7 @@ font-family:verdana;
 text-align: center;}
 
 </style>
-<iframe width="1313" height="480" src="https://www.youtube.com/embed/C1Jud3zOcL4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe 
->
-<p> Hay muchos animales en peligro de extincion y los humanos son la mayor causa</p>
+<iframe width="640" height="360" src="https://www.youtube.com/embed/JnRco_KV7d0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p> La mejor leshe que vas a probar</p>
 </body>
 </html>
