--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Title</title>
+<title>Website Nico A</title>
 </head>
 <body>
 <h1>Compra una deliciosa leshe</h1>
@@ -16,6 +16,29 @@ text-align: center;}
 
 </style>
 <iframe width="640" height="360" src="https://www.youtube.com/embed/JnRco_KV7d0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p> La mejor leshe que vas a probar</p>
+<p> La mejor leshe que vas a probar
+- Dios</p>
+
+<table>
+  <tr>
+    <th>Todos las leshes shabo</th>
+    <th>presio</th>
+  </tr>
+  <tr>
+    <td>Leshe shabo Orishinall</td>
+    <td>200$</td>
+  </tr>
+  <tr>
+    <td>Shocoleshe para los shocoshabos</td>
+    <td>3 panes con jamon</td>
+  </tr>
+   <tr>
+    <td>Leshe shabo shursh</td>
+    <td>3000$</td>
+  </tr>
+</table>
 </body>
 </html>
+
+
+
